# UOI-StudyNotes

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
forum/: forms.py  models.py  urls.py  utils.py  views.py
forum/migrations/: 0001_initial.py  0002_alter_post_content.py  0003_post_user.py  0004_comment.py  0005_post_topic.py  0006_alter_post_topic.py  0007_alter_post_topic.py  0008_post_likes.py  0009_alter_post_likes.py  0010_reply_delete_comment.py
forum/static/: main.css
forum/templates/email_templates/: new_reply.html
forum/templates/forum/: base.html  edit_post.html  new_post.html  post.html  posts.html
forum/tests/: test_forms.py  test_models.py  test_views.py
main/: settings.py  urls.py
notes/: forms.py  models.py  urls.py  utils.py  views.py
notes/migrations/: 0001_initial.py  0002_note_subject.py  0003_note_file.py
notes/static/: main.css  summernote.css
notes/templates/email_templates/: new_comment.html
notes/templates/notes/: base.html  edit_note.html  new_note.html  note.html  notes.html
notes/tests/: test_forms.py  test_models.py  test_views.py
users/: forms.py  urls.py  utils.py  views.py
users/templates/email_templates/: update_account_notification.html
users/templates/registration/: login.html  register.html
users/templates/users/: account.html
users/tests/: test_forms.py  test_views.py
