[project]
name = "uoi-studynotes"
version = "0.1.0"
description = "A notes archive app for UOI students."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.2",
    "bleach==6.2.0",
    "brotli==1.1.0",
    "click==8.3.0",
    "crispy-bootstrap5==2025.6",
    "dj-database-url==3.0.1",
    "django-bootstrap5==25.2",
    "django==5.2.7",
    "django-crispy-forms==2.4",
    "django-extensions==4.1",
    "django-summernote==0.8.20.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.15.0",
    "uvicorn==0.35.0",
    "webencodings==0.5.1",
    "whitenoise==6.11.0",
]
