[project]
name = "uoi-studynotes"
version = "0.1.0"
description = "A notes archive app for UOI students."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "bleach==6.3.0",
    "brotli==1.2.0",
    "click==8.3.1",
    "crispy-bootstrap5==2025.6",
    "dj-database-url==3.1.0",
    "django-bootstrap5==25.3",
    "django==6.0",
    "django-crispy-forms==2.5",
    "django-extensions==4.1",
    "django-summernote==0.8.20.0",
    "gunicorn==25.0.0",
    "h11==0.16.0",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "uvicorn==0.40.0",
    "webencodings==0.5.1",
    "whitenoise==6.11.0",
]
